fix(web): content & navigation list scroll on mobile (#1207)

--- a/packages/web/src/stylesheets/_items-column.scss
+++ b/packages/web/src/stylesheets/_items-column.scss
@@ -108,8 +108,6 @@
   }
 
   .infinite-scroll {
-    @include minimal_scrollbar();
-    height: inherit;
     background-color: var(--items-column-items-background-color);
   }
 
